Delete classes from users
