# src/main/java/cz/cvut/fit/tjv/fitnesscenter/model/User.java
@@ -1,6 +1,8 @@
 package cz.cvut.fit.tjv.fitnesscenter.model;
 
-import jakarta.persistence.*;
+import jakarta.persistence.Entity;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.Id;
 import jakarta.validation.constraints.Email;
 import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.NotNull;
@@ -8,9 +10,6 @@ import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
-
-import java.util.HashSet;
-import java.util.Set;
 
 @Entity(name = "person")
 @Getter
@@ -46,22 +45,4 @@ public class User {
 
     @NotNull(message = "customer is required.")
     private Boolean customer;
-
-    @ManyToMany(mappedBy = "trainers", fetch = FetchType.EAGER)
-    private Set<GroupClass> leadClasses = new HashSet<>();
-
-    public void addLeadClass(GroupClass groupClass) {
-        leadClasses.add(groupClass);
-    }
-
-    public void removeLeadClass(GroupClass groupClass) {
-        leadClasses.remove(groupClass);
-    }
-
-    @PreRemove
-    public void removeTrainersFromGroupClasses() {
-        for (GroupClass leadClass : leadClasses) {
-            leadClass.removeTrainer(this);
-        }
-    }
 }
